--- a/catch-of-the-day/src/css/_animations.styl
+++ b/catch-of-the-day/src/css/_animations.styl
@@ -6,38 +6,32 @@
 */
 
 .order-enter
-  transform: translateX(-120%)
+  background red
   transition 0.5s
-  max-height: 0
-  padding 0 !important
+  max-height 60px
+  transform: translateX(-120%)
   &.order-enter-active
-    max-height 60px
+    background yellow 
     transform: translateX(0)
     padding 2rem 0 !important
 
+
 .order-exit
+  background thistle
   transition 0.5s
   transform: translateX(0)
-  &.order-exit-active
-    transform: translateX(120%)
-    padding: 0
+  &.order-enter-active
+    background palegoldenrod  
+    transform: translateX(-120%)
+    padding 2rem 0 !important
 
-
-.count-enter
+.count
   background: red
-  transition .5s
+  transition 5s
   transform translateY(100%)
   &.count-enter-active
-    background: yellow
+    background: yellow 
     transform translateY(0)
 
 .count-exit
-  background: black
-  transform translateY(0)
-  transition .5s
-  position absolute
-  left 0
-  bottom 0
-  &.count-exit-active
-    background green
-    transform translateY(-100%) scale(3)
+  background: black 
