--- a/catch-of-the-day/src/css/style.css
+++ b/catch-of-the-day/src/css/style.css
@@ -1,54 +1,44 @@
 .order-enter {
-  -webkit-transform: translateX(-120%);
-          transform: translateX(-120%);
+  background: #f00;
   -webkit-transition: 0.5s;
   transition: 0.5s;
-  max-height: 0;
-  padding: 0 !important;
+  max-height: 60px;
+  -webkit-transform: translateX(-120%);
+          transform: translateX(-120%);
 }
 .order-enter.order-enter-active {
-  max-height: 60px;
+  background: #ff0;
   -webkit-transform: translateX(0);
           transform: translateX(0);
   padding: 2rem 0 !important;
 }
 .order-exit {
+  background: #d8bfd8;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   -webkit-transform: translateX(0);
           transform: translateX(0);
 }
-.order-exit.order-exit-active {
-  -webkit-transform: translateX(120%);
-          transform: translateX(120%);
-  padding: 0;
+.order-exit.order-enter-active {
+  background: #eee8aa;
+  -webkit-transform: translateX(-120%);
+          transform: translateX(-120%);
+  padding: 2rem 0 !important;
 }
-.count-enter {
+.count {
   background: #f00;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-transition: 5s;
+  transition: 5s;
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
 }
-.count-enter.count-enter-active {
+.count.count-enter-active {
   background: #ff0;
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
 .count-exit {
   background: #000;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-}
-.count-exit.count-exit-active {
-  background: #008000;
-  -webkit-transform: translateY(-100%) scale(3);
-          transform: translateY(-100%) scale(3);
 }
 @font-face {
   font-family: "haymakerregular";
@@ -520,7 +510,7 @@ input[type=submit] {
   border: 1px solid #000;
   font-weight: 600;
   font-size: 1.5rem;
-  font-family: 'Open Sans';
+  font-family: 'Open Sans', sans-serif;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
   position: relative;
